Shifted skills logo's, spelling fixes

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -183,6 +183,10 @@ nav a:hover {
   .btn {
     padding: 8px 12px;
   }
+
+  .skills-container img {
+    border: none;
+  }
   footer .contact-box {
     padding: 30px;
   }
